[tool.poetry]
name = "aok"
version = "0.1.0"
description = "Complex dictionary comparisons to simplify testing."
authors = ["Scott Ernst <swernst@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/rocket-boosters/a-ok"
repository = "https://gitlab.com/rocket-boosters/a-ok"
documentation = "https://gitlab.com/rocket-boosters/a-ok"
keywords = ["testing", "comparisons"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Utilities",
  "Typing :: Typed"
]
exclude = ["aok/tests"]

[tool.poetry.dependencies]
python = "^3.8.2"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = ">=6.1.2"
coverage = ">=5.3"
black = { version = "*", allow-prereleases = true }
pytest-cov = ">=2.10.1"
flake8 = ">=3.8.4"
flake8-black = ">=0.2.1"
mypy = ">=0.790"
taskipy = ">=1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
# https://github.com/illBeRoy/taskipy
black = "black ."
mypy = "poetry run mypy . --ignore-missing-imports"
flake8 = "flake8 ."
test = "pytest . --cov-report=term-missing --cov=."
lint = "task black && task flake8 && task mypy"
check = "task black && task flake8 && task mypy && task test"
terrable = "terrable --bucket=cbrdata-prod-tf-modules"
terrable-devel = "terrable --bucket=cbrdata-devel-tf-modules"
